--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   angular: ^5.0.0
   angular_forms: ^2.0.0
   angular_components: ^0.11.0
+  firebase: ^5.0.0
 
 dev_dependencies:
   angular_test: ^2.0.0
